--- a/Navbar/Aboutus/Website.css
+++ b/Navbar/Aboutus/Website.css
@@ -5,7 +5,7 @@ body{
     margin-top: 20vw;
 }
 .background-image {
-    background-image: url('/image/MeerLOGO.png');
+    background-image: url('../../image/MeerLOGO.png');
     background-size: cover;
     background-position: center;
     position: fixed;
